Corrected markup comments

--- a/StreetView_ImageClassification.ipynb
+++ b/StreetView_ImageClassification.ipynb
@@ -4,15 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CNN_SV\n",
+    "# StreetView_ImageClassification\n",
     "\n",
-    "Este programa clasifica imágenes de fachadas de casas usando una Red Neuronal Convolucional (CNN). \n",
-    "Hay dos clases a la salida de la red: \n",
-    "    SV (Fotografías tomadas de Street View) \n",
-    "    REAL (Fotografías tomadas con cámara frente al domicilio)\n",
-    "    \n",
-    "Se pueden correr todas las celdas sin modificaciones (excepto la primera, a menos que se extraiga el .zip en ese directorio)\n",
-    "También se pueden hacer modificaciones. Particularmente en la celda de entrenamiento. No recomiendo hacer cambios a la arquitectura de la red, a menos que se tenga buen conocimiento de CNNs. Nota: Si se modifica la arquitectura de la red, no se pueden usar pesos que fueron entrenados con otra arquitectura."
+    "This program classifies images of house facades using a Convolutional Neural Network (CNN)\n",
+    "Output has two classes: \n",
+    "    SV (Pictures taken from Street View screenshots) \n",
+    "    REAL (Real pictures taken in front of the house)"
    ]
   },
   {
@@ -29,12 +26,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dependencies and connection to the CAS server."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Dependencies and connection to the CAS server.\n",
     "import os\n",
     "import time\n",
     "import math\n",
@@ -71,12 +74,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load, partition, pre-process and augment images"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Cargar, particionar, preprocesar, y aumentar imágenes\n",
     "t0=time.time()\n",
     "\n",
     "s.loadImages(casOut={'name':'Images','replace':True},\n",
@@ -110,14 +119,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define the Convolutional Neural Network architecture"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Defining the Convolutional Neural Network architecture\n",
-    "\n",
-    "\n",
     "#The defined architecture has four groups of layers, each grou consisting of:\n",
     "\n",
     "##Convolutional layer\n",
@@ -222,6 +235,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load pre-trained weights"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -248,12 +268,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CNN Training"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## CNN Training\n",
     "## Weights are randomly initialized..\n",
     "\n",
     "t0=time.time()\n",
@@ -301,14 +327,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## Save Trained weights\n",
-    "name='myWeights' #Modificar nombre del archivo\n",
-    "s.save(table=\"CNN_SV_WEIGHTS\",name='Weights/'+name+'.csv',replace=True)"
+    "### Save Trained weights"
    ]
   },
   {
@@ -317,8 +339,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Exportar to ASTORE and score\n",
-    "\n",
+    "name='myWeights' #Modificar nombre del archivo\n",
+    "s.save(table=\"CNN_SV_WEIGHTS\",name='Weights/'+name+'.csv',replace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exportar as ASTORE and score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "s.dlExportmodel(casout={'name':'ASTORE','replace':True},\n",
     "                initweights='CNN_SV_WEIGHTS',\n",
     "                modeltable='CNN_SV')\n",
